fix(inforContainer.scss): 🐛 correct text alignment bug on infoContainer title text

--- a/sass/components/_infoContainer.scss
+++ b/sass/components/_infoContainer.scss
@@ -11,6 +11,7 @@
         &__title {
             font-size: 24px;
             line-height: 31.25px;
+            text-align: left;
         }
     }
     &__descriptionContainer {
